--- a/adoptionForm.html
+++ b/adoptionForm.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="adoption-form">
-            <h1 class="title josefinsans-normal-black-30px text-center py-5">Formulario de <br />adopción</h1>
+            <h1 class="title josefinsans-normal-black-30px text-center pb-3">Formulario de <br />adopción</h1>
             <div class="d-flex justify-content-center align-content-center align-items-center">
                 <form action="" method="">
                     <div  class="base-form d-flex flex-column justify-content-center">
