--- a/createPet.html
+++ b/createPet.html
@@ -45,232 +45,86 @@
             <h1 class="title josefinsans-normal-black-30px text-center py-5">Dar de alta <br />nueva mascota</h1>
             <div class="d-flex justify-content-center align-content-center align-items-center">
                 <form action="" method="">
-                    <div  class="base-form d-flex flex-column justify-content-center">
+                    <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputText"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Actualmente
-                            tienes
-                            animales?
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama?
                         </label>
                         <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputText2"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuáles?
+                        <label for="inputText"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué tipo de
+                            mascota
+                            es?
                         </label>
                         <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputText3"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Anteriormente has
-                            tenido otros animales?
+                        <label for="inputText"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál
+                            es su edad
+                            aproximada?
                         </label>
                         <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputText4"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué fue
-                            lo que
-                            pasó con ellos?
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su sexo?
                         </label>
                         <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputText5"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Todas las
-                            personas
-                            en
-                            casa están de acuerdo en adoptar?
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su talla
+                            aproximada?
                         </label>
                         <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputText6"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
-                            por algún motivo
-                            tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos sobre su
+                            carácter.
                         </label>
                         <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputText7"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuántos
-                            años crees
-                            que
-                            vive un perro o gato en promedio?
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos un poco
+                            de
+                            su historia.
                         </label>
                         <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
                     <br>
                     <div class="base-form d-flex flex-column justify-content-center">
                         <label for="inputText8"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde
-                            dormirá el
-                            adoptado?
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención o
+                        cuidados especiales? ¿Cuáles?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
                     </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputText9"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuánto
-                            tiempo
-                            pasará
-                            solo?
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    <div class="d-flex justify-content-center pt-5">
+                        <input type="submit" value="Agregar mascota" class="button-p josefinsans-normal-white-20px ">
                     </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputText10"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">En caso
-                            de tener
-                            empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputText11"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Quién
-                            será el
-                            responsable y se hará cargo de cubrir los gastos del adoptado?
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
-                    </div>
-                    <br>
-                    <div class="base-form d-flex flex-column justify-content-center">
-                        <label for="inputText12"
-                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Tienes
-                            un médico
-                            veterinario de cabecera?
-                        </label>
-                        <input type="text"
-                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
-                    </div>
-                    <br>
-                    <div class="checkbox-form base-form d-flex flex-column">
-                        <p class="form-label josefinsans-normal-chetwode-blue-20px">
-                            Es importante que estés consciente
-                            que los animales necesitan visitas
-                            periódicas al veterinario, vacunación,
-                            desparasitación, limpieza, uso de
-                            collar con placa de identificación,
-                            una correcta alimentación y espacio
-                            para poder vivir felices.
-                        </p>
-                        <div class="d-flex flex-row align-items-center justify-content-center">
-                            <input type="checkbox" class="" id="checkbox-form">
-                            <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px">De acuerdo.
-                            </label>
-                        </div>
-                        <div class="d-flex justify-content-center">
-                            <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
-                        </div>
-                    </div>
-                </form> 
+                </form>
             </div>
         </div>
     </main>
 
-    <main class="create-pet-form">
-        <div class="top-background">
-            <div class="background-orange"></div>
-            <div class="rectangle-background"></div>
-            <div class="close">
-                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="">
-            </div>
-        </div>
-
-        <div class="title">
-            <h1 class="josefinsans-normal-black-30px">Dar de alta <br />nueva mascota</h1>
-        </div>
-
-        <form action="" method="" class="group-form" id="create-pet">
-            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
-                <li>
-                    <label for="inputText"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText2"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué tipo de mascota es?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText3"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su edad aproximada?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText4"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su sexo?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText5"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su talla aproximada?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText6" class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos sobre su carácter.
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText7"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos un poco de su historia.
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText8"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención o cuidados especiales? ¿Cuáles?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <input type="submit" value="Agregar mascota" class="button-p josefinsans-normal-white-20px ">
-            </ul>
-        </form>
-    </main>
     <footer text-center>
         <div class="top-footer">
             <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
