--- a/formShelter.html
+++ b/formShelter.html
@@ -35,119 +35,135 @@
         </div>
     </header>
 
-    <main class="shelter-form">
+    <main>
         <div class="top-background">
-            <div class="background-orange"></div>
-            <div class="rectangle-background"></div>
+            <div class="rectangle-background container-fluid"></div>
             <div class="close">
-                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="">
+                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
             </div>
         </div>
-
-        <div class="title">
-            <h1 class="josefinsans-normal-black-30px">Completa el perfil <br />de tu refugio</h1>
+        <div class="shelter-form">
+            <h1 class="title josefinsans-normal-black-30px text-center py-5">Completa el perfil <br />de tu refugio</h1>
+            <div class="d-flex justify-content-center align-content-center align-items-center">
+                <form action="" method="">
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputNameShelter"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama tu
+                            refugio?
+                        </label>
+                        <input type="organization"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Nombre del refugio">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputName"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es el nombre
+                            del
+                            representante?
+                        </label>
+                        <input type="given-name"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Nombre">
+                        <br>
+                        <input type="family-name"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Apellidos">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputPhone"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se les puede
+                            contactar?
+                        </label>
+                        <input type="tel"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Teléfono">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputAdress"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde está
+                            ubicado el
+                            refugio?
+                        </label>
+                        <input type="street-address"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Calle y número">
+                        <br>
+                        <input type="address-line1"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Colonia">
+                        <br>
+                        <input type="address-line2"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Municipio/Delegación">
+                        <br>
+                        <input type="address-line3"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Estado">
+                        <br>
+                        <input type="postal-code"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Código postal">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputlink"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
+                            tienes un link de la página web, por favor ingrésalo:
+                        </label>
+                        <input type="url"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="Link">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputPayPal"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Ingresa el link
+                            del
+                            PayPal donde puedan donar los adoptantes.
+                        </label>
+                        <input type="url"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                            placeholder="PayPal">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputDescription"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cuéntanos sobre
+                            tu
+                            refugio.
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText8"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención
+                            o
+                            cuidados especiales? ¿Cuáles?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                    </div>
+                    <br>
+                    <div>
+                        <input type="checkbox" class="overlap-group" id="checkbox-form">
+                        <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px">He leído y acepto los
+                            términos
+                            y condiciones de uso.
+                        </label>
+                        <div class="d-flex justify-content-center">
+                            <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-
-        <form action="" method="" class="group-form" id="adoption-form">
-            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
-                <li>
-                    <label for="inputNameShelter"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama tu
-                        refugio?
-                    </label>
-                    <input type="organization"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Nombre del refugio">
-                </li>
-                <br>
-                <li>
-                    <label for="inputName"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es el nombre del
-                        representante?
-                    </label>
-                    <input type="given-name"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Nombre">
-                    <br>
-                    <input type="family-name"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Apellidos">
-                </li>
-                <br>
-                <li>
-                    <label for="inputPhone"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se les puede
-                        contactar?
-                    </label>
-                    <input type="tel"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Teléfono">
-                </li>
-                <br>
-                <li>
-                    <label for="inputAdress"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde está ubicado el
-                        refugio?
-                    </label>
-                    <input type="street-address"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Calle y número">
-                    <br>
-                    <input type="address-line1"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Colonia">
-                    <br>
-                    <input type="address-line2"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Municipio/Delegación">
-                    <br>
-                    <input type="address-line3"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Estado">
-                    <br>
-                    <input type="postal-code"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Código postal">
-                </li>
-                <br>
-                <li>
-                    <label for="inputlink" class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
-                        tienes un link de la página web, por favor ingrésalo:
-                    </label>
-                    <input type="url"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="Link">
-                </li>
-                <br>
-                <li>
-                    <label for="inputPayPal"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Ingresa el link del
-                        PayPal donde puedan donar los adoptantes.
-                    </label>
-                    <input type="url"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                        placeholder="PayPal">
-                </li>
-                <br>
-                <li>
-                    <label for="inputDescription"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap"> Cuéntanos sobre tu
-                        refugio.
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li class="checkbox-form">
-                    <input type="checkbox" class="overlap-group" id="checkbox-form">
-                    <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px">He leído y acepto los términos 
-                        y condiciones de uso.
-                    </label>
-                </li>
-                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
-            </ul>
-        </form>
     </main>
+
     <footer text-center>
         <div class="top-footer">
             <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
