--- a/homeShelter.html
+++ b/homeShelter.html
@@ -28,12 +28,40 @@
                 <a href="adoptionRequestsListShelter.html">
                     <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
                 </a>
-                <button>
+                <button id="toggle-menu">
                     <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
                 </button>
             </div>
         </div>
     </header>
+
+    <nav class="container-menu">
+        <button id="close-menu" class="close-menu">
+            <img src="assets/svg/xcircle.svg" class="menu" alt="" style="width: 2em;">
+        </button>
+        <ul class="container-inner-menu">
+            <li>
+                <a href="homeShelter.html">
+                    Inicio
+                </a>
+            </li>
+            <li>
+                <a href="profileShelterEdit.html">
+                    Perfil
+                </a>
+            </li>
+            <li>
+                <a href="adoptionRequestsListShelter.html">
+                    Solicitudes
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    Cerrar sesión
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <main>
         <div class="top-main">
@@ -45,7 +73,7 @@
         <div class="d-flex flex-wrap justify-content-center align-items-center">
             <div class="adoption-requests text-center d-flex justify-content-center">
                 <div class="card" style="width: 30rem;">
-                    <a href="adoptionRequestsShelter.html">
+                    <a href="adoptionRequestsListShelter.html">
                         <h1 class="requests-number josefinsans-semi-white-30px">10</h1>
                         <p class=" title-requests josefinsans-semi-white-20px">Solicitudes <br> de adopción</p>
                     </a>
