--- a/detailPet.html
+++ b/detailPet.html
@@ -104,8 +104,9 @@
                                 <p class="special-needs">Espacios amplios.</p>
                             </div>
                         </div>
-                        <div class="user-actions d-inline-flex flex-row justify-content-evenly">
-                            <form action="https://www.paypal.com/donate" method="post" target="_top"
+                        <div>
+                        <div class=" adopt-form user-actions d-inline-flex flex-row justify-content-evenly shelter-button">
+                            <!-- <form action="https://www.paypal.com/donate" method="post" target="_top"
                                 class="button-donation">
                                 <input type="hidden" name="business" value="paw.chontli@gmail.com" />
                                 <input type="hidden" name="item_name" value="Pawchontli" />
@@ -116,11 +117,11 @@
                                 <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
                                     height="1" />
                             </form>
-                            <a href="adoptionForm.html">
+                            <a  href="adoptionForm.html">
                                 <button class="button-main">Adoptar</button>
                             </a>
-                        </div>
-                        <div class="info-shelter py-5 d-flex flex-column shelter-button">
+                        
+                        <div class="info-shelter py-5 d-flex flex-column ">
                             <p class="px-4 josefinsans-chetwode-blue-18px">
                                 REFUGIO
                             </p>
@@ -132,6 +133,8 @@
                                     <p class="d-flex flex-wrap">Felipe Carrillo puerto #400, Alberto Zamora, <br> Coyoacán, 04000, CDMX.</p>
                                 </div>
                             </a>
+                        </div> -->
+                        </div>
                         </div>
                     </div>
                 </div>
