--- a/homeShelter.html
+++ b/homeShelter.html
@@ -66,15 +66,15 @@
     <main>
         <div class="top-main">
             <div class="background-main">
-                <p class="josefinsans-normal-white-30px text-center">Bienvenido <br>Refugio San Gregorio</p>
+                <p class="josefinsans-normal-white-30px text-center name-shelter"></p>
             </div>
             <div class="rectangle-background"></div>
         </div>
-        <div class="d-flex flex-wrap justify-content-center align-items-center">
-            <div class="adoption-requests text-center d-flex justify-content-center">
+        <div class=" d-flex flex-wrap justify-content-center align-items-center">
+            <div class="forms-button adoption-requests text-center d-flex justify-content-center">
                 <div class="card" style="width: 30rem;">
                     <a href="adoptionRequestsListShelter.html">
-                        <h1 class="requests-number josefinsans-semi-white-30px">10</h1>
+                        <h1 class="requests-number josefinsans-semi-white-30px"></h1>
                         <p class=" title-requests josefinsans-semi-white-20px">Solicitudes <br> de adopción</p>
                     </a>
                 </div>
