--- a/homeShelter.html
+++ b/homeShelter.html
@@ -72,21 +72,21 @@
         </div>
         <div class=" d-flex flex-wrap justify-content-center align-items-center">
             <div class="forms-button adoption-requests text-center d-flex justify-content-center">
-                <div class="card" style="width: 30rem;">
+                <!-- <div class="card" style="width: 30rem;">
                     <a href="adoptionRequestsListShelter.html">
                         <h1 class="requests-number josefinsans-semi-white-30px"></h1>
                         <p class=" title-requests josefinsans-semi-white-20px">Solicitudes <br> de adopción</p>
                     </a>
-                </div>
+                </div> -->
             </div>
 
-            <div class="add-new-pet text-center d-flex justify-content-center pt-4">
-                <div class="card" style="width: 30rem;"">
+            <div class="create-pet add-new-pet text-center d-flex justify-content-center pt-4">
+                <!-- <div class="card" style="width: 30rem;"">
                     <a href=" createPet.html">
                     <img src="assets/svg/add.svg" alt="" style="height: 8em; width: 8em;">
                     <h3 class="josefinsans-medium-chetwode-blue-20px">Añadir mascota</h3>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="search-in-adoption-pet">
